--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,37 +30,6 @@ x-backend-common: &backend-common
   networks:
     - app-network
 
-x-kafka-common: &kafka-common
-  image: bitnami/kafka:4.1
-  expose:
-    - "9092"
-  environment:
-    KAFKA_CFG_PROCESS_ROLES: controller,broker
-    KAFKA_CFG_CONTROLLER_QUORUM_VOTERS: 1@kafka1:9093,2@kafka2:9093,3@kafka3:9093
-    KAFKA_CFG_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
-    KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
-    KAFKA_CFG_CONTROLLER_LISTENER_NAMES: CONTROLLER
-    KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE: 'false'
-    KAFKA_CFG_DEFAULT_REPLICATION_FACTOR: 3
-    KAFKA_CFG_MIN_INSYNC_REPLICAS: 2
-    KAFKA_CFG_NUM_PARTITIONS: 6
-    KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
-    KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
-    KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR: 2
-    KAFKA_CFG_MESSAGE_MAX_BYTES: 10485760
-  healthcheck:
-    test: ["CMD", "kafka-topics.sh", "--bootstrap-server", "localhost:9092", "--list"]
-    interval: 15s
-    timeout: 10s
-    retries: 10
-    start_period: 40s
-  networks:
-    - app-network
-  deploy:
-    resources:
-      limits:
-        memory: 2g
-
 services:
   redis:
     image: redis:8.2.2-alpine
@@ -222,58 +191,77 @@ services:
       - minio_4_1:/data1
       - minio_4_2:/data2
 
-  kafka1:
-    <<: *kafka-common
-    container_name: kafka1
-    hostname: kafka1
+  kafka-0:
+    image: docker.io/bitnami/kafka:4.1
+    expose:
+      - ${KAFKA_PORT_INTERNAL}
     environment:
-      <<: *kafka-common.environment
-      KAFKA_CFG_NODE_ID: 1
-      KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka1:9092
+      # KRaft settings
+      - KAFKA_CFG_NODE_ID=0
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_CONTROLLER_QUORUM_BOOTSTRAP_SERVERS=kafka-0:9093,kafka-1:9093,kafka-2:9093
+      - KAFKA_INITIAL_CONTROLLERS=0@kafka-0:9093:bcdefghijklmnopqrstuvw,1@kafka-1:9093:cdefghijklmnopqrstuvwx,2@kafka-2:9093:defghijklmnopqrstuvwxy
+      - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
+      # Listeners
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      # Clustering
+      - KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR=3
+      - KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=3
+      - KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR=2
     volumes:
-      - kafka1-data:/bitnami/kafka
+      - kafka_0_data:/bitnami/kafka
+  kafka-1:
+    image: docker.io/bitnami/kafka:4.1
+    expose:
+      - ${KAFKA_PORT_INTERNAL}
+    environment:
+      # KRaft settings
+      - KAFKA_CFG_NODE_ID=1
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_CONTROLLER_QUORUM_BOOTSTRAP_SERVERS=kafka-0:9093,kafka-1:9093,kafka-2:9093
+      - KAFKA_INITIAL_CONTROLLERS=0@kafka-0:9093:bcdefghijklmnopqrstuvw,1@kafka-1:9093:cdefghijklmnopqrstuvwx,2@kafka-2:9093:defghijklmnopqrstuvwxy
+      - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
+      # Listeners
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      # Clustering
+      - KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR=3
+      - KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=3
+      - KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR=2
+    volumes:
+      - kafka_1_data:/bitnami/kafka
+  kafka-2:
+    image: docker.io/bitnami/kafka:4.1
+    expose:
+      - ${KAFKA_PORT_INTERNAL}
+    environment:
+      # KRaft settings
+      - KAFKA_CFG_NODE_ID=2
+      - KAFKA_CFG_PROCESS_ROLES=controller,broker
+      - KAFKA_CFG_CONTROLLER_QUORUM_BOOTSTRAP_SERVERS=kafka-0:9093,kafka-1:9093,kafka-2:9093
+      - KAFKA_INITIAL_CONTROLLERS=0@kafka-0:9093:bcdefghijklmnopqrstuvw,1@kafka-1:9093:cdefghijklmnopqrstuvwx,2@kafka-2:9093:defghijklmnopqrstuvwxy
+      - KAFKA_KRAFT_CLUSTER_ID=abcdefghijklmnopqrstuv
+      # Listeners
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://:9092
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      # Clustering
+      - KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR=3
+      - KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=3
+      - KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR=2
+    volumes:
+      - kafka_2_data:/bitnami/kafka
 
-    kafka2:
-      <<: *kafka-common
-      container_name: kafka2
-      hostname: kafka2
-      environment:
-        <<: *kafka-common.environment
-        KAFKA_CFG_NODE_ID: 2
-        KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka2:9092
-      volumes:
-        - kafka2-data:/bitnami/kafka
 
-    kafka3:
-      <<: *kafka-common
-      container_name: kafka3
-      hostname: kafka3
-      environment:
-        <<: *kafka-common.environment
-        KAFKA_CFG_NODE_ID: 3
-        KAFKA_CFG_ADVERTISED_LISTENERS: PLAINTEXT://kafka3:9092
-      volumes:
-        - kafka3-data:/bitnami/kafka
-
-    # Optional but insanely impressive
-    kafka-ui:
-      image: provectuslabs/kafka-ui:latest
-      container_name: kafka-ui
-      ports:
-        - "8081:8080"
-      environment:
-        KAFKA_CLUSTERS_0_NAME: picaspot-cluster
-        KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: kafka1:9092,kafka2:9092,kafka3:9092
-      depends_on:
-        kafka1:
-          condition: service_healthy
-        kafka2:
-          condition: service_healthy
-        kafka3:
-          condition: service_healthy
-      networks:
-        - app-network
-        -
 volumes:
   postgres_data:
   redis-data:
@@ -288,9 +276,9 @@ volumes:
   minio_4_2:
 
   # Kafka volumes for 3 nodes
-  kafka1-data:
-  kafka2-data:
-  kafka3-data:
+  kafka_0_data:
+  kafka_1_data:
+  kafka_2_data:
 
 networks:
   app-network:
