--- a/src/nginx/conf/nginx.conf
+++ b/src/nginx/conf/nginx.conf
@@ -94,23 +94,23 @@ http {
             proxy_set_header Connection "upgrade";
         }
 
-        # Minio Console
-        location /dev/minio/ {
-            rewrite ^/dev/minio/(.*) /$1 break;
-            proxy_set_header Host $http_host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header X-Forwarded-Prefix /dev/minio;
+        # Kafka UI (Development/Monitoring)
+        location /dev/kafka/ {
+            proxy_pass http://kafka-ui:${KAFKA_UI_PORT_INTERNAL}/dev/kafka/;
 
-            proxy_connect_timeout 300;
-            # Default is HTTP/1, keepalive is only enabled in HTTP/1.1
+            proxy_set_header Host $host;
+            proxy_redirect off;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection "upgrade";
-            chunked_transfer_encoding off;
 
-            proxy_pass http://console/;
+            # Kafka UI specific settings
+            proxy_connect_timeout 600;
+            proxy_send_timeout 600;
+            proxy_read_timeout 600;
+            send_timeout 600;
+        }
+
         }
     }
     # MinIO Server Block
@@ -242,6 +242,20 @@ http {
             chunked_transfer_encoding off;
 
             proxy_pass http://console/;
+        # Kafka UI (Development/Monitoring)
+        location /dev/kafka/ {
+            proxy_pass http://kafka-ui:${KAFKA_UI_PORT_INTERNAL}/dev/kafka/;
+
+            proxy_set_header Host $host;
+            proxy_redirect off;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+
+            # Kafka UI specific settings
+            proxy_connect_timeout 600;
+            proxy_send_timeout 600;
+            proxy_read_timeout 600;
+            send_timeout 600;
         }
-    }
-}
+
