--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -30,27 +30,30 @@ x-backend-common: &backend-common
   networks:
     - app-network
 
+# 1. Extracted common environment variables to a separate anchor for merging
+x-kafka-env: &kafka-env
+  # Cluster ID for KRaft mode
+  CLUSTER_ID: abcdefghijklmnopqrstuv
+  # KRaft settings (using dot notation)
+  KAFKA_process.roles: controller,broker
+  KAFKA_controller.quorum.voters: 0@kafka-0:9093,1@kafka-1:9093,2@kafka-2:9093
+  # Listeners
+  KAFKA_listeners: PLAINTEXT://:9092,CONTROLLER://:9093
+  KAFKA_listener.security.protocol.map: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
+  KAFKA_controller.listener.names: CONTROLLER
+  KAFKA_inter.broker.listener.name: PLAINTEXT
+  # Clustering
+  KAFKA_offsets.topic.replication.factor: 3
+  KAFKA_transaction.state.log.replication.factor: 3
+  KAFKA_transaction.state.log.min.isr: 2
+  # Log directories
+  KAFKA_log.dirs: /var/lib/kafka/data
+
 x-kafka-common: &kafka-common
   image: apache/kafka:4.1.1
   expose:
     - ${KAFKA_PORT_INTERNAL}
-  environment:
-    # KRaft settings
-    KAFKA_PROCESS_ROLES: controller,broker
-    KAFKA_CONTROLLER_QUORUM_VOTERS: 0@kafka-0:9093,1@kafka-1:9093,2@kafka-2:9093
-    CLUSTER_ID: abcdefghijklmnopqrstuv
-    # Listeners
-    KAFKA_LISTENERS: PLAINTEXT://:9092,CONTROLLER://:9093
-    KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://:9092
-    KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT,CONTROLLER:PLAINTEXT
-    KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
-    KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
-    # Clustering
-    KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 3
-    KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 3
-    KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 2
-    # Log directories
-    KAFKA_LOG_DIRS: /var/lib/kafka/data
+  # Removed 'environment' from here as it cannot be easily merged when overridden
   networks:
     - app-network
   healthcheck:
@@ -114,10 +117,8 @@ services:
     depends_on:
       - celery_worker
       - redis
-
     networks:
       - app-network
-
 
   postgres:
     image: postgis/postgis:18-3.6-alpine
@@ -201,7 +202,6 @@ services:
       - minio_1_1:/data1
       - minio_1_2:/data2
 
-
   minio2:
     <<: *minio-common
     hostname: minio2
@@ -227,7 +227,11 @@ services:
     <<: *kafka-common
     hostname: kafka-0
     environment:
-      KAFKA_NODE_ID: 0
+      # 2. Merge common env vars here
+      <<: *kafka-env
+      KAFKA_node.id: 0
+      # 3. Use specific hostname for advertised listener
+      KAFKA_advertised.listeners: PLAINTEXT://kafka-0:9092
     volumes:
       - kafka_0_data:/var/lib/kafka/data
 
@@ -235,7 +239,9 @@ services:
     <<: *kafka-common
     hostname: kafka-1
     environment:
-      KAFKA_NODE_ID: 1
+      <<: *kafka-env
+      KAFKA_node.id: 1
+      KAFKA_advertised.listeners: PLAINTEXT://kafka-1:9092
     volumes:
       - kafka_1_data:/var/lib/kafka/data
 
@@ -243,7 +249,9 @@ services:
     <<: *kafka-common
     hostname: kafka-2
     environment:
-      KAFKA_NODE_ID: 2
+      <<: *kafka-env
+      KAFKA_node.id: 2
+      KAFKA_advertised.listeners: PLAINTEXT://kafka-2:9092
     volumes:
       - kafka_2_data:/var/lib/kafka/data
 
@@ -264,11 +272,9 @@ services:
     networks:
       - app-network
 
-
 volumes:
   postgres_data:
   redis-data:
-  # MinIO volumes for 4 nodes with 2 disks each
   minio_1_1:
   minio_1_2:
   minio_2_1:
@@ -277,8 +283,6 @@ volumes:
   minio_3_2:
   minio_4_1:
   minio_4_2:
-
-  # Kafka volumes for 3 nodes
   kafka_0_data:
   kafka_1_data:
   kafka_2_data:
